[tool.poetry]
name = "heroku-django-elasticapm"
version = "0.0.0"
description = "Demo app for Heroku + Django + Elastic APM."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "my_app" }]

[tool.poetry.dependencies]
# injected into runtime.txt so must be exact
python = "3.10.6"
django = "^4.1"
dj-database-url = "*"
psycopg2 = "*"
whitenoise = "*"
gunicorn = "*"
elastic-apm = "*"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "^4.0"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
